<resources>
    <string name="app_name">MungNolZa</string>
    <string name="login_button_kakao">카카오 로그인</string>
    <string name="login_button_google">구글 로그인</string>
    <string name="app_access_permission_info">앱 접근권한 안내</string>
    <string name="app_access_permission_info_text">멍놀자의 다양한 서비스 제공을 위해\n아래와 같은 기능이 필요합니다.</string>
    <string name="optional_access_permission">선택적 접근 권한</string>
    <string name="permission_photo_camera">사진 카메라 (선택)</string>
    <string name="permission_notification">알림 (선택)</string>
    <string name="permission_location">위치 (선택)</string>
    <string name="permission_request_reason_location">위치 정보 조회 시 사용</string>
    <string name="request_permission_reason_notification">다양한 소식 알람 시 사용</string>
    <string name="request_permission_reason_gallery">게시판, 반려 동물 프로필 등록 시 사용</string>
    <string name="permission_request_explain1">선택적 접근 권한은 해당 기능을 사용할 때만 허용이 필요합니다.</string>
    <string name="permission_request_explain2">비허용시에도 해당 기능, 외 서비스 이용이 가능합니다.</string>
    <string name="permission_request_explain3">허용 상태는 휴대폰 설정 메뉴에서 언제든지 변경할 수 있습니다.</string>
    <string name="let_start_with_mungnolza">이제 멍놀자와 함께 행복한\n 반려 생활을 시작해요</string>
    <string name="next">다음</string>
    <string name="provide_safe_walk_service">아이들과 안전하고 즐거운\n산책 서비스를 제공해요</string>
    <string name="provide_kind_service">아이들에게 가족같은\n서비스를 제공해요</string>
    <string name="input_profile">주소 입력</string>
    <string name="input_profile_name">이름</string>
    <string name="input_profile_phone">전화번호</string>
    <string name="addr_search_button_text">주소 찾기</string>
    <string name="input_profile_addr">주소</string>
    <string name="input_profile_detail_addr">상세 주소</string>
    <string name="fragment_input_pet_profile_title">반려동물 프로필 입력</string>
    <string name="text_pet_kind">강아지 견종</string>
    <string name="text_pet_name">강아지 이름</string>
    <string name="text_pet_gender">강아지 성별</string>
    <string name="pet_male">남자아이</string>
    <string name="pet_female">여자아이</string>
    <string name="pet_age">강아지 나이</string>
    <string name="pet_weight">강아지 몸무게</string>
    <string name="neutering_yes">했어요</string>
    <string name="neutering_no">안했어요</string>
    <string name="pet_significant">강아지 특이사항</string>
    <string name="plz_know_unique_behavior">우리 아이만의 특별한 점을 알려주세요!</string>
    <string name="three_hour">180분</string>

    <!-- 안영준 스트링값 -->
    <string name="title_text_reservation">예약</string>
    <string name="user_where_to_visit">어디로 방문할까요?</string>
    <string name="jogging_reservation">산책 예약</string>
    <string name="plz_select_reservation">원하시는 예약을 선택해주세요</string>
    <string name="care_reservation">돌봄 예약</string>
    <string name="no_pet_msg1">등록된 반려 동물이 없어요\n소중한 우리 아이를 등록해주세요</string>
    <string name="go_pet_registration">우리 아이 등록하기</string>
    <string name="select_reservation_pet">예약할 반려동물 선택</string>
    <string name="plz_enter_detail_addr">상세주소를 입력해주세요.</string>
    <string name="enter_new_addr">새 주소 입력</string>
    <string name="use_my_addr">내 주소 사용</string>
    <string name="lets_start">시작하기</string>
    <string name="hint_input_title">제목을 입력해주세요</string>
    <string name="hint_input_content">내용을 입력해주세요</string>
    <string name="hint_input_comment">댓글을 입력해주세요</string>
    <string name="time">시간</string>
    <string name="a_half_hour">30분</string>
    <string name="one_hour">60분</string>
    <string name="two_hour">120분</string>
    <string name="all_day">종일</string>

    <!-- 최나연 사용 -->
    <string name="toolbar_title_reservation">신청내역</string>
    <string name="toolbar_title_petsitter_info">펫시터 정보</string>
    <string name="toolbar_title_petsitter_review">후기</string>
    <string name="toolbar_title_reservation_confirmed">예약 확인</string>
    <string name="toolbar_title_reservation_list">예약 내역</string>
    <string name="toolbar_title_petsitter_review_write">펫시터 후기 작성</string>
    <string name="toolbar_title_realtime_location">실시간 펫 위치</string>
    <!--bottom navigation menu item-->
    <string name="menu_item_bottom_navigation_home">홈</string>
    <string name="menu_item_bottom_navigation_chatting">채팅</string>
    <string name="menu_item_bottom_navigation_freeboard">자유게시판</string>
    <string name="menu_item_bottom_navigation_reservation">예약</string>
    <string name="menu_item_bottom_navigation_profile">프로필</string>

    <!-- 이영주 스트링값 -->
    <string name="toolbar_main_text">멍놀자</string>
    <string name="main_button_text">예약하기</string>
    <string name="main_button_text_location">실시간 위치</string>
    <string name="main_text_review">고객 리뷰</string>
    <string name="main_text_petsitter">매칭된 팻시터 현황을 확인해보세요!</string>
    <string name="main_text_petsitter_introduce1">🎉 2024년 </string>
    <string name="main_text_petsitter_introduce2"> 우수 펫시터</string>
    <string name="main_text_petsitter_introduce3">를 소개합니다 🎉</string>
    <string name="main_text_petsitter_whats_best_sitter">🏆 월간 우수 펫시터란?</string>
    <string name="main_text_petsitter_whats_best_sitter_explain">월간 우수 펫시터는 2024년 4월 고객과 반려 동물 아이들에게 가장 많은 사랑을 주신 펫시터분을 선정해요</string>
    <string name="main_text_petsitter_thanksto">🙏 감사의 마음을 담아</string>
    <string name="board_write">글쓰기</string>
    <string name="lets_reserve">예약하기</string>
    <string name="lets_reserve_list">예약 목록 보기</string>
    <string name="view_all">전체 보기</string>
    <string name="reserve_complete">예약이 완료되었어요</string>
    <string name="reserve_date">예약 날짜</string>
    <string name="reserve_time">예약 시간</string>
    <string name="reserve_pay">결제 금액</string>
    <string name="matched_petsitter">매칭된 팻시터</string>
    <string name="plz_select_petsitter">원하는 펫시터를 선택해주세요</string>
    <string name="service_time">신청 시간</string>
    <string name="reserve_addr">예약 주소</string>
    <string name="plz_enter_addr">주소를 입력해 주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>