<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_color"
    android:orientation="vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/input_profile"
            android:textColor="@android:color/black"
            android:textSize="@dimen/shared_toolbar_title_size"
            android:textStyle="bold" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_round_container"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/img_sungooli_dog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/binggrae_bold"
            android:text="@string/plz_enter_addr"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/brown400"
            android:layout_marginTop="@dimen/shared_common_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_addr"
                android:layout_width="match_parent"
                android:layout_height="@dimen/shared_button_height"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/On_tertiary_container"
                android:text="@string/addr_search_button_text"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/shared_edittext_margin_top">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:lines="2"
                    app:helperTextTextColor="@color/red" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/shared_edittext_margin_top">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_detail_addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_profile_detail_addr" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/shared_common_margin_10"
                android:layout_marginBottom="@dimen/shared_common_margin_10"
                android:background="@drawable/shared_button_design"
                android:fontFamily="@font/binggrae_bold"
                android:text="@string/next"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>